ubuntu-dev-tools (0.39ubuntu1) intrepid; urgency=low

  [ Jonathan Patrick Davies ]
  * common.py: Use os.path.expanduser() instead of os.environ.

 -- Jonathan Patrick Davies <jpds@ubuntu.com>  Tue, 12 Aug 2008 18:32:05 +0100

ubuntu-dev-tools (0.38ubuntu1) intrepid; urgency=low

  [ Jonathan Patrick Davies ]
  * requestsync: Check if user is a member of ubuntu-core-dev if sync request
    is for a package in main.
  * common.py: Change cookie file permissions to read and write only by user.

 -- Jonathan Patrick Davies <jpds@ubuntu.com>  Tue, 12 Aug 2008 14:52:34 +0100

ubuntu-dev-tools (0.37ubuntu1) intrepid; urgency=low

  [ Jonathan Patrick Davies ]
  * get-branches:
    - Open the teams code page before making a new directory.
    - Now check team option before anything else.
    - Check that the team has branches before downloading.
  * doc/get-branches.1: Created.
  * hugdaylist: Improved argument and error handling.
  * pull-lp-source:
    - Use optparse for option handling.
    - Check that the 'release' and 'package' actually exist on Launchpad.
    - Use subprocess for dget calls.
  * buildd: Imported from Martin Pitt's scripts.
  * common.py: Python module to be used to enable the use of cookies
    to authenticate with Launchpad.
  * debian/ubuntu-dev-tools.install: Added line to install common.py above to
    the correct location.
  * requestsync:
    - Use the functions in the common.py file above to authenticate with
      Launchpad.
    - Using the Launchpad cookie file, validate that the user is a member of
      the ubuntu-dev team on Launchpad. Thus, checking if the user needs
      sponsership or not (LP: #130648).
  * doc/requestsync.1: Removed mention of -s flag. Obsoleted by the above.
  * massfile:
    - Use the functions in the common.py file above to authenticate with
      Launchpad.
  * debian/control: Changed XS-Python-Version to >= 2.5.

  [ Siegfried-Angel Gevatter Pujals ]