@@ -14,7 +14,7 @@ Package: ubuntu-dev-tools
 Architecture: all
 Section: devel
 Depends: ${python:Depends}, binutils, devscripts, sudo, python-launchpad-bugs (>= 0.2.25), python-debian, dctrl-tools, lsb-release, diffstat, dpkg-dev
-Recommends: bzr, pbuilder, reportbug (>= 3.39ubuntu1)
+Recommends: bzr, pbuilder | sbuild, reportbug (>= 3.39ubuntu1)
 Conflicts: devscripts (<< 2.10.7ubuntu5)
 Replaces: devscripts (<< 2.10.7ubuntu5)
 XB-Python-Version: ${python:Versions}
