@@ -39,9 +39,9 @@ Copyright:
 
 Licenses:
 
-404main, check-symbols, dch-repeat, dgetlp, mk-sbuild-lv, pbuilder-dist,
-requestsync, reverse-build-depends, submittodebian, update-maintainer
-and what-patch are licensed under GPLv2:
+404main, check-symbols,  dgetlp, pbuilder-dist, requestsync,
+reverse-build-depends, submittodebian and update-maintainer are licensed
+under the GNU General Public License, version 2:
 
     This package is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -55,8 +55,9 @@ and what-patch are licensed under GPLv2:
 On Debian systems, the complete text of the GNU General Public License v2
 can be found in `/usr/share/common-licenses/GPL-2'.
 
-get-branches, get-build-deps, debian-pull-debdiff, massfile, ppaput,
-suspicious-source and pull-lp-source are licensed under GPLv3:
+dch-repeat, get-branches, get-build-deps, massfile, mk-sbuild-lv, ppaput,
+pull-debian-debdiff, pull-lp-source, suspicious-source and what-patch are
+licensed under the GNU General Public License, version 3:
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -71,6 +72,6 @@ On Debian systems, the complete text of the GNU General Public License v3
 can be found in `/usr/share/common-licenses/GPL-3'.
 
 The following of the scripts can be used, at your option, regarding any
-later version of the previously specified license: 404main, pbuilder-dist,
-dgetlp, reverse-build-depends, suspicious-source, pull-lp-source  and
-get-build-deps.
+later version of the previously specified license: 404main, dch-repeat, dgetlp,
+get-build-deps, mk-sbuild-lv, pull-debian-debdiff, pull-lp-source,
+reverse-build-depends, suspicious-source, what-patch.
