@@ -8,14 +8,15 @@
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
-# as published by the Free Software Foundation; version 2.
+# as published by the Free Software Foundation; either version 3
+# of the License, or (at your option) any later version.
 # 
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
 # 
-# See file /usr/share/common-licenses/GPL-2 for more details.
+# See file /usr/share/common-licenses/GPL for more details.
 #
 # ##################################################################
 #
